replaced with updated version

--- a/documentation/analysistools.ipynb
+++ b/documentation/analysistools.ipynb
@@ -73,13 +73,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "99ce34b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
+    "\n",
+    "os.environ['KMP_DUPLICATE_LIB_OK']='True'\n",
     "\n",
     "#Full path to testing directory on your machine\n",
     "\n",
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "7bd21e76",
    "metadata": {},
    "outputs": [],
@@ -100,19 +102,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c19523d",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "deb0430e",
    "metadata": {},
    "outputs": [],
    "source": [
     "HOMEDIR = r\"C:\\Users\\jal20\\2022-surf-trojai\\documentation\"\n",
-    "NODE = r\"charlie\""
+    "NODE = r\"ENTER THE NAME OF A NIST HPC NODE YOU HAVE ACCESS TO\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "id": "6db8e0a0",
    "metadata": {},
    "outputs": [],
@@ -126,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "5fe67040",
    "metadata": {},
    "outputs": [],
@@ -136,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "708d77ea",
    "metadata": {},
    "outputs": [
@@ -144,17 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HEREEEE\n",
-      "#!/bin/bash\n",
-      "searchDir=C:\\Users\\jal20\\2022-surf-trojai\\documentation \n",
-      "temp=\"round,node,cpus,driver,team,model,1, 2, 3\" \n",
-      "\n",
       "C:\\Users\\jal20\\2022-surf-trojai\\testing\n",
-      "HEREEEE\n",
-      "#!/bin/bash\n",
-      "searchDir=C:\\Users\\jal20\\2022-surf-trojai\\documentation \n",
-      "temp=\"round,node,cpus,driver,team,model,1, 2, 3\" \n",
-      "\n",
       "C:\\Users\\jal20\\2022-surf-trojai\\testing\n"
      ]
     }
@@ -180,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "cfa03598",
    "metadata": {},
    "outputs": [],
@@ -193,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "id": "e808e799",
    "metadata": {},
    "outputs": [
@@ -322,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "id": "55790619",
    "metadata": {},
    "outputs": [],
@@ -338,27 +336,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "id": "09daa946",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HEREEEE\n",
-      "#!/bin/bash\n",
-      "searchDir=C:\\Users\\jal20\\2022-surf-trojai\\documentation \n",
-      "temp=\"round,node,cpus,driver,team,model,1\" \n",
-      "\n",
-      "HEREEEE\n",
-      "#!/bin/bash\n",
-      "searchDir=C:\\Users\\jal20\\2022-surf-trojai\\documentation \n",
-      "temp=\"round,node,cpus,driver,team,model,1\" \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Round 9 CPU Core Tests\n",
     "compiler(9,node=NODE , experiment = \"CoresDeterminism9\",homedir = HOMEDIR, iterations=1,cpus=10,model=0,driver=\"default\", teams =deterministicContainers['round9'] ,custom=False)\n",
@@ -371,15 +352,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b28b9fe1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# input is csv with columns: \"round,node,cpus,driver,team,model,1,2,3,4,5,6,7,8 ...\"\n",
     "\n",
-    "r4Cores = pd.read_csv(r\"data/CoresDeterminism4.csv\")\n",
-    "r9Cores = pd.read_csv(r\"data/CoresDeterminism9.csv\")\n",
+    "#r4Cores = pd.read_csv(r\"data/CoresDeterminism4.csv\")\n",
+    "#r9Cores = pd.read_csv(r\"data/CoresDeterminism9.csv\")\n",
     "\n",
     "\n",
     "def deterministicCPU(df):\n",
@@ -432,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c24f35d3",
    "metadata": {},
    "outputs": [],
@@ -476,25 +457,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4996ff59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "auto(9, node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=0, driver=driver, teams = deterministicContainers['round9'], custom=True, bits = 16)\n",
-    "auto(9, node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=3, driver=driver, teams = deterministicContainers['round9'], custom=True, bits = 16)\n",
-    "auto(9, node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=8, driver=driver, teams = deterministicContainers['round9'], custom=True, bits = 32)\n",
-    "auto(9, node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=12, driver=driver, teams = deterministicContainers['round9'], custom=True, bits = 32)\n",
+    "#driver = \"default\"\n",
     "\n",
-    "compiler(9, experiment = \"tweakTests16bit\", node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=0, driver=driver, teams = deterministicContainers['round9'], custom=True)\n",
-    "compiler(9, experiment = \"tweakTests16bit\", node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=3, driver=driver, teams = deterministicContainers['round9'], custom=True)\n",
-    "compiler(9, experiment = \"tweakTests16bit\", node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=8, driver=driver, teams = deterministicContainers['round9'], custom=True)\n",
-    "compiler(9, experiment = \"tweakTests16bit\", node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=12, driver=driver, teams = deterministicContainers['round9'], custom=True)\n"
+    "#auto(9, node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=0, driver=driver, teams = deterministicContainers['round9'], custom=True, bits = 16)\n",
+    "#auto(9, node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=3, driver=driver, teams = deterministicContainers['round9'], custom=True, bits = 16)\n",
+    "#auto(9, node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=8, driver=driver, teams = deterministicContainers['round9'], custom=True, bits = 32)\n",
+    "#auto(9, node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=12, driver=driver, teams = deterministicContainers['round9'], custom=True, bits = 32)\n",
+    "\n",
+    "#compiler(9, experiment = \"tweakTests16bit\", node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=0, driver=driver, teams = deterministicContainers['round9'], custom=True)\n",
+    "#compiler(9, experiment = \"tweakTests16bit\", node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=3, driver=driver, teams = deterministicContainers['round9'], custom=True)\n",
+    "#compiler(9, experiment = \"tweakTests16bit\", node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=8, driver=driver, teams = deterministicContainers['round9'], custom=True)\n",
+    "#compiler(9, experiment = \"tweakTests16bit\", node=NODE ,homedir = HOMEDIR, iterations=10, cpus=10, model=12, driver=driver, teams = deterministicContainers['round9'], custom=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3e381d2d",
    "metadata": {},
    "outputs": [
@@ -598,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e3712c22",
    "metadata": {},
    "outputs": [],
@@ -615,13 +598,13 @@
     "compiler(9, node=NODE, experiment = \"driverTests9\", homedir = HOMEDIR, iterations=3, cpus=10, model=0, driver=driver, teams = deterministicContainers['round9'], custom=False)\n",
     "\n",
     "# Round 4 GPU driver tests \n",
-    "auto(4, node=NODE ,homedir = HOMEDIR, iterations=3, cpus=10, model=0, driver=driver, teams = deterministicContainers['round4'], custom=False)\n",
-    "compiler(4, node=NODE, experiment = \"driverTests4\", homedir = HOMEDIR, iterations=3, cpus=10, model=0, driver=driver, teams = deterministicContainers['round4'], custom=False)\n"
+    "#auto(4, node=NODE ,homedir = HOMEDIR, iterations=3, cpus=10, model=0, driver=driver, teams = deterministicContainers['round4'], custom=False)\n",
+    "#compiler(4, node=NODE, experiment = \"driverTests4\", homedir = HOMEDIR, iterations=3, cpus=10, model=0, driver=driver, teams = deterministicContainers['round4'], custom=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ba5094d1",
    "metadata": {},
    "outputs": [
@@ -696,14 +679,6 @@
    "source": [
     "![outputexample2.png](attachment:outputexample2.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27e87b2d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
